--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
       "url": "https://github.com/bower/bower-registry/blob/master/LICENSE"
     }
   ],
-  "main": "client",
+  "main": "lib/Client",
   "engines": {
     "node": ">=0.8.0"
   },
@@ -23,6 +23,7 @@
   "dependencies": {
     "async": "~0.2.8",
     "request": "~2.21.0",
-    "rimraf": "~2.1.4"
+    "rimraf": "~2.1.4",
+    "mkdirp": "~0.3.5"
   }
 }
