Add search command, other fixes/changes.
- Use LRU to prevent huge memory usage when using the module in long-living programs
- Lookup no longer throws when a package is not found (null is returned instead).
- Cache mechanism improvements.
- Misc fixes.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "async": "~0.2.8",
+    "lru-cache": "~2.3.0",
     "request": "~2.21.0",
     "rimraf": "~2.1.4",
     "mkdirp": "~0.3.5"
