--- a/package.json
+++ b/package.json
@@ -31,9 +31,10 @@
     "grunt": "~0.4.1",
     "grunt-contrib-watch": "~0.4.4",
     "grunt-contrib-jshint": "~0.6.0",
-    "grunt-simple-mocha": "~0.4.0"
+    "grunt-simple-mocha": "~0.4.0",
+    "chai": "~1.7.2"
   },
   "scripts": {
-    "test": "mocha -R spec"
+    "test": "grunt build --verbose"
   }
 }
