update jshint settings

--- a/.jshintrc
+++ b/.jshintrc
@@ -35,10 +35,9 @@
     "boss": true,
     "debug": false,
     "eqnull": true,
-    "es5": false,
     "esnext": false,
     "evil": false,
-    "expr": false,
+    "expr": true,
     "funcscope": false,
     "globalstrict": false,
     "iterator": false,
