--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "grunt-contrib-watch": "~0.4.4",
     "grunt-contrib-jshint": "~0.6.0",
     "grunt-simple-mocha": "~0.4.0",
-    "chai": "~1.7.2"
+    "chai": "~1.7.2",
+    "reply": "~0.3.0"
   },
   "scripts": {
     "test": "grunt build --verbose"
