--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "grunt-contrib-jshint": "~0.6.0",
     "grunt-simple-mocha": "~0.4.0",
     "chai": "~1.7.2",
-    "replay": "~1.7.0"
+    "nock": "~0.18.2"
   },
   "scripts": {
     "test": "grunt build --verbose"
