--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bower-registry-client",
-  "version": "0.1.0-rc.5",
+  "version": "0.1.0",
   "description": "Provides easy interaction with the Bower registry.",
   "author": "Twitter",
   "licenses": [
