--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
   },
   "dependencies": {
     "async": "~0.2.8",
-    "bower-config": "~0.2.0-rc.1",
+    "bower-config": "~0.2.0",
     "graceful-fs": "~2.0.0",
     "lru-cache": "~2.3.0",
-    "request": "~2.22.0",
+    "request": "~2.25.0",
     "request-replay": "~0.1.0",
     "rimraf": "~2.2.0",
     "mkdirp": "~0.3.5"
