--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "bower-config": "~0.6.1",
     "graceful-fs": "~2.0.0",
     "lru-cache": "~2.3.0",
+    "mkdirp": "~0.3.5",
     "request": "~2.51.0",
     "request-replay": "~0.2.0",
     "rimraf": "~2.2.0",
-    "mkdirp": "~0.3.5"
+    "should-proxy": "^1.0.0"
   },
   "devDependencies": {
     "expect.js": "~0.2.0",
